templates/EC2.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This Template Create an EC2 in public subnet.

Parameters: 
  
  
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: String
    Default: mykeypair
    

  VPCId:
    Description: Put a VPC Id here
    Type: String
    Default: vpc-07769cfeddd4729ac
    
    
  PrivateSubnetId:
    Description: Put a subnet Id here
    Type: String
    Default: subnet-040817b226556f3d0
    
    

Resources: 
  TomcatInstance:
    Type: 'AWS::EC2::Instance'  
    Properties:
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref TomcatSecurityGroup
        - !Ref TomcatCustomTCPSecurityGroup
      UserData:
        Fn::Base64: |    
          #!/bin/sh 
          sudo yum install java -y
          req_tom_ver="10.1.7"
          tom_m_v=$(echo $req_tom_ver|cut -c 1,2)
          URL="https://dlcdn.apache.org/tomcat/tomcat-${tom_m_v}/v${req_tom_ver}/bin/apache-tomcat-${req_tom_ver}.tar.gz"
          wget $URL
          sudo tar -xvzf apache-tomcat-${req_tom_ver}.tar.gz
          sudo mv apache-tomcat-${req_tom_ver} tomcat${tom_m_v}
          sudo rm -rf apache-tomcat-${req_tom_ver}.tar.gz
          sudo chmod 700 /tomcat${tom_m_v}/bin/*.sh
          cd /tomcat${tom_m_v}/bin
          sudo ./startup.sh

      AvailabilityZone: us-east-1a
      ImageId: ami-02396cdd13e9a1257
      InstanceType: t2.micro
      SubnetId: !Ref PrivateSubnetId
      

  TomcatSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPCId
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp:  0.0.0.0/0

  TomcatCustomTCPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPCId
      GroupDescription: Enable tomcat access via port 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp:  0.0.0.0/0
